[project]
name = "void-game-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "pytelegrambotapi>=4.27.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "types-pyautogui>=0.9.3.20241230",
]
